--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             {"d": "Lower Extremity Ultrasound - CCL", "c": "93922", "p": 1200.0},
             {"d": "MRI Brain w/o Contrast", "c": "70551", "p": 3200.0},
             {"d": "CT Chest w/ Contrast", "c": "71260", "p": 4100.0}
-            // ... truncated for snippet, data logic handles thousands of rows
         ];
 
         const App = () => {
@@ -79,8 +78,7 @@
                                     className="w-full bg-slate-800 border-none rounded-2xl py-4 pl-6 pr-12 text-white placeholder-slate-500 focus:ring-2 focus:ring-blue-500 shadow-inner"
                                     placeholder="Search by Procedure or CPT..."
                                     value={search}
-                                    onChange={(e) => setSearchTerm(e.target.value)}
-                                    onInput={(e) => setSearch(e.target.value)}
+                                    onChange={(e) => setSearch(e.target.value)}
                                 />
                             </div>
                         </div>
@@ -107,20 +105,37 @@
                             <ResponsiveContainer width="100%" height="100%">
                                 <BarChart data={filtered.slice(0, 10)}>
                                     <CartesianGrid strokeDasharray="3 3" vertical={false} stroke="#e2e8f0" />
-                                    <XAxis dataKey="c" axisLine={false} tickLine={false} tick={{fill: '#64748b', fontSize: 12}} />
-                                    <YAxis axisLine={false} tickLine={false} tick={{fill: '#64748b'}} tickFormatter={(v) => `$${v/1000}k`} />
-                                    <Tooltip cursor={{fill: '#f8fafc'}} content={({active, payload}) => {
-                                        if (active && payload && payload.length) {
-                                            return (
-                                                <div className="bg-slate-900 text-white p-4 rounded-2xl shadow-2xl border border-slate-700">
-                                                    <p className="text-xs font-bold text-slate-400 mb-1">{payload[0].payload.c}</p>
-                                                    <p className="text-sm font-semibold mb-2">{payload[0].payload.d}</p>
-                                                    <p className="text-xl font-black text-emerald-400">{fmt(payload[0].value)}</p>
-                                                </div>
-                                            );
-                                        }
-                                        return null;
-                                    }} />
+                                    <XAxis 
+                                        dataKey="c" 
+                                        axisLine={false} 
+                                        tickLine={false} 
+                                        tick={{fill: '#64748b', fontSize: 12}}
+                                        interval={0}
+                                        angle={-45}
+                                        textAnchor="end"
+                                        height={60}
+                                    />
+                                    <YAxis 
+                                        axisLine={false} 
+                                        tickLine={false} 
+                                        tick={{fill: '#64748b'}} 
+                                        tickFormatter={(v) => `$${v/1000}k`} 
+                                    />
+                                    <Tooltip 
+                                        cursor={{fill: '#f8fafc'}} 
+                                        content={({active, payload}) => {
+                                            if (active && payload && payload.length) {
+                                                return (
+                                                    <div className="bg-slate-900 text-white p-4 rounded-2xl shadow-2xl border border-slate-700">
+                                                        <p className="text-xs font-bold text-slate-400 mb-1">{payload[0].payload.c}</p>
+                                                        <p className="text-sm font-semibold mb-2">{payload[0].payload.d}</p>
+                                                        <p className="text-xl font-black text-emerald-400">{fmt(payload[0].value)}</p>
+                                                    </div>
+                                                );
+                                            }
+                                            return null;
+                                        }} 
+                                    />
                                     <Bar dataKey="p" radius={[10, 10, 0, 0]}>
                                         {filtered.slice(0, 10).map((entry, index) => (
                                             <Cell key={`cell-${index}`} fill={index === 0 ? '#2563eb' : '#3b82f6'} fillOpacity={1 - (index * 0.08)} />
@@ -152,7 +167,7 @@
                             </table>
                             {filtered.length > 50 && (
                                 <div className="p-6 text-center text-slate-400 text-sm font-medium bg-slate-50/50">
-                                    Showing top 50 results
+                                    Showing top 50 results of {filtered.length}
                                 </div>
                             )}
                         </div>
